kubernetes/media/immich/base/ingresses/server-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-https
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "media-sablier-immich@kubernetescrd"
spec:
  tls:
  - secretName: immich-bas-tls
  rules:
  - host: immich.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: immich-server
            port:
              number: 80
